--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <header style="background: #90596d;">
+    <header>
         <h1>Welcome to My Portfolio</h1>
     </header>
     <main>
