--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 by <a href="https://github.com/olivsiarchiv">olivsiarchiv</a></p>
+        <p><small>&copy; 2025 by <a href="https://github.com/olivsiarchiv">olivsiarchiv</a></small></p>
     </footer>
 </body>
 </html>
