--- a/index.html
+++ b/index.html
@@ -13,45 +13,18 @@
     <header>
         <h1>Welcome to My Portfolio</h1>
     </header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown link
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </nav>
     <main>
         <section>
             <h2>About Me</h2>
             <p>This is a sample paragraph.</p>
         </section>
     </main>
-    <footer>
+    <!-- <footer>
         <p><small>&copy; 2025 by <a href="https://github.com/olivsiarchiv">olivsiarchiv</a></small></p>
+    </footer> -->
+    <footer class="bg-body-tertiary text-center text-lg-start">
+        <div class="text-center p-3">&copy; 2025 by <a href="https://github.com/olivsiarchiv">olivsiarchiv</a>
+        </div>
     </footer>
 </body>
 </html>
