--- a/index.html
+++ b/index.html
@@ -19,12 +19,8 @@
             <p>This is a sample paragraph.</p>
         </section>
     </main>
-    <!-- <footer>
+    <footer>
         <p><small>&copy; 2025 by <a href="https://github.com/olivsiarchiv">olivsiarchiv</a></small></p>
-    </footer> -->
-    <footer class="bg-body-tertiary text-center text-lg-start">
-        <div class="text-center p-3">&copy; 2025 by <a href="https://github.com/olivsiarchiv">olivsiarchiv</a>
-        </div>
     </footer>
 </body>
 </html>
