--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <section>
-            <h2>About Me</h2>
+            <h2><b>About Me</b></h2>
             <p>This is a sample paragraph.</p>
         </section>
     </main>
