--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>My Portfolio</title>
 </head>
-<body>
-    <header>
-        <h1>Welcome to My Portfolio</h1>
-    </header>
-    <main>
-        <section>
-            <h2><b>About Me</b></h2>
+<body class="d-flex flex-column vh-100">
+    <div class="header text-white text-center py-4">
+        <h1 class="fw-bolder">Welcome to My Portfolio</h1>
+    </div>
+    <div class="main flex-grow-1 p-3">
+        <div class="about-me p-4">
+            <h2 class="fw-bold">About Me</h2>
             <p>This is a sample paragraph.</p>
-        </section>
-    </main>
-    <footer>
-        <p><small>&copy; 2025 by <a href="https://github.com/olivsiarchiv">olivsiarchiv</a></small></p>
-    </footer>
+        </div>
+    </div>
+    <div class="footer text-center py-3 text-white">
+        <p class="fst-italic mb-0">&copy; 2025 by <a href="https://github.com/olivsiarchiv" class="text-decoration-none">olivsiarchiv</a></p>
+    </div>
 </body>
 </html>
