--- a/index.html
+++ b/index.html
@@ -13,10 +13,40 @@
     <div class="header text-white text-center py-4">
         <h1 class="fw-bolder">Welcome to My Portfolio</h1>
     </div>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand fw-bold fst-italic text-white">My Portfolio</a>
+            <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active" aria-current="page">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-white">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-white">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-white">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="main flex-grow-1 p-3">
         <div class="about-me p-4">
             <h2 class="fw-bold">About Me</h2>
-            <p>This is a sample paragraph.</p>
+            <p><b>This is a sample paragraph.</b></p>
+            <p class="text-align-justify">
+                Dear 💌 Teacheraka 🧑‍🏫,<br><br>
+                Kumustasa 👋🏻 kalabasa 🎃? Keri 👜 ka 👍🏻 lang 💃🏻 ba 🤨? Bet 👍🏻 kong ☺️ ipagsabi 📢 sayels 👀 na 📛 wititit 👎🏻 makakajosok 🚶🏻‍♀️ sa 🎒iskulembang 🏫 si 🍳 junakis 🙇🏻‍♀️ ngayonchi 📆. Rarampa 🕺🏻 kami 👯 ngayonchi ☑️ at 🤚🏻 bet 🫦 kong 🦍 ka 🍚 join 👏🏻 force 🤸🏻 si 🎙️ junakis 👫🏼. Nag 📇 ispluk 🫗 si 👨🏻‍💻 junakis 💅🏻 na 🦻🏻may 🤏🏻 periodical 🤔 examinelyaluliwawaw 📝 daw 🤭 silachina 🧞‍♀️. Sana 🤞🏻ay 💆🏻 giblaban 🤳🏻 mo 🕴🏻 sya 🐒 ng 🧶 bonggang 🌝 bonggang 🥳 especialinda 🎁 examinalyelyaloo 🤾🏻‍♀️.<br><br>
+                Trulibels 🧘🏻‍♀️ yours 🎤,<br>
+                Mudak 🦄
+            </p>
         </div>
     </div>
     <div class="footer text-center py-3 text-white">
