--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/scripts.js"></script>
     <title>My Portfolio</title>
 </head>
 <body class="d-flex flex-column vh-100">
@@ -14,7 +15,7 @@
         <h1 class="fw-bolder">Welcome to My Portfolio</h1>
     </div>
     <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
+        <div class="container-fluid px-4">
             <a href="#" class="navbar-brand fw-bold fst-italic text-white">My Portfolio</a>
             <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,23 +23,33 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="#" class="nav-link active" aria-current="page">Home</a>
+                        <a href="#" class="nav-link" onclick="loadContent('home')">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-white">About</a>
+                        <a href="#" class="nav-link" onclick="loadContent('about')">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-white">Projects</a>
+                        <a href="#" class="nav-link" onclick="loadContent('projects')">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-white">Contact</a>
+                        <a href="#" class="nav-link" onclick="loadContent('contact')">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="main flex-grow-1 p-3">
-        <div class="about-me p-4">
+    <div class="main flex-grow-1 p-3" id="main-content">
+        <div class="home-content p-4" id="home">
+            <h2 class="fw-bold">Homepage</h2>
+            <p><b>This is a sample paragraph.</b></p>
+            <!-- <p class="text-align-justify">
+                Dear 💌 Teacheraka 🧑‍🏫,<br><br>
+                Kumustasa 👋🏻 kalabasa 🎃? Keri 👜 ka 👍🏻 lang 💃🏻 ba 🤨? Bet 👍🏻 kong ☺️ ipagsabi 📢 sayels 👀 na 📛 wititit 👎🏻 makakajosok 🚶🏻‍♀️ sa 🎒iskulembang 🏫 si 🍳 junakis 🙇🏻‍♀️ ngayonchi 📆. Rarampa 🕺🏻 kami 👯 ngayonchi ☑️ at 🤚🏻 bet 🫦 kong 🦍 ka 🍚 join 👏🏻 force 🤸🏻 si 🎙️ junakis 👫🏼. Nag 📇 ispluk 🫗 si 👨🏻‍💻 junakis 💅🏻 na 🦻🏻may 🤏🏻 periodical 🤔 examinelyaluliwawaw 📝 daw 🤭 silachina 🧞‍♀️. Sana 🤞🏻ay 💆🏻 giblaban 🤳🏻 mo 🕴🏻 sya 🐒 ng 🧶 bonggang 🌝 bonggang 🥳 especialinda 🎁 examinalyelyaloo 🤾🏻‍♀️.<br><br>
+                Trulibels 🧘🏻‍♀️ yours 🎤,<br>
+                Mudak 🦄
+            </p> -->
+        </div>
+        <div class="about-content p-4" id="about">
             <h2 class="fw-bold">About Me</h2>
             <p><b>This is a sample paragraph.</b></p>
             <p class="text-align-justify">
@@ -47,6 +58,26 @@
                 Trulibels 🧘🏻‍♀️ yours 🎤,<br>
                 Mudak 🦄
             </p>
+        </div>
+        <div class="projects-content p-4" id="projects">
+            <h2 class="fw-bold">Projects</h2>
+            <p><b>This is a sample paragraph.</b></p>
+            <p class="text-align-justify">
+                Dear 💌 Teacheraka 🧑‍🏫,<br><br>
+                Kumustasa 👋🏻 kalabasa 🎃? Keri 👜 ka 👍🏻 lang 💃🏻 ba 🤨? Bet 👍🏻 kong ☺️ ipagsabi 📢 sayels 👀 na 📛 wititit 👎🏻 makakajosok 🚶🏻‍♀️ sa 🎒iskulembang 🏫 si 🍳 junakis 🙇🏻‍♀️ ngayonchi 📆. Rarampa 🕺🏻 kami 👯 ngayonchi ☑️ at 🤚🏻 bet 🫦 kong 🦍 ka 🍚 join 👏🏻 force 🤸🏻 si 🎙️ junakis 👫🏼. Nag 📇 ispluk 🫗 si 👨🏻‍💻 junakis 💅🏻 na 🦻🏻may 🤏🏻 periodical 🤔 examinelyaluliwawaw 📝 daw 🤭 silachina 🧞‍♀️. Sana 🤞🏻ay 💆🏻 giblaban 🤳🏻 mo 🕴🏻 sya 🐒 ng 🧶 bonggang 🌝 bonggang 🥳 especialinda 🎁 examinalyelyaloo 🤾🏻‍♀️.<br><br>
+                Trulibels 🧘🏻‍♀️ yours 🎤,<br>
+                Mudak 🦄
+            </p>
+        </div>
+        <div class="contact-content p-4" id="contact">
+            <h2 class="fw-bold">Contact Information</h2>
+            <p><b>This is a sample paragraph.</b></p>
+            <!-- <p class="text-align-justify">
+                Dear 💌 Teacheraka 🧑‍🏫,<br><br>
+                Kumustasa 👋🏻 kalabasa 🎃? Keri 👜 ka 👍🏻 lang 💃🏻 ba 🤨? Bet 👍🏻 kong ☺️ ipagsabi 📢 sayels 👀 na 📛 wititit 👎🏻 makakajosok 🚶🏻‍♀️ sa 🎒iskulembang 🏫 si 🍳 junakis 🙇🏻‍♀️ ngayonchi 📆. Rarampa 🕺🏻 kami 👯 ngayonchi ☑️ at 🤚🏻 bet 🫦 kong 🦍 ka 🍚 join 👏🏻 force 🤸🏻 si 🎙️ junakis 👫🏼. Nag 📇 ispluk 🫗 si 👨🏻‍💻 junakis 💅🏻 na 🦻🏻may 🤏🏻 periodical 🤔 examinelyaluliwawaw 📝 daw 🤭 silachina 🧞‍♀️. Sana 🤞🏻ay 💆🏻 giblaban 🤳🏻 mo 🕴🏻 sya 🐒 ng 🧶 bonggang 🌝 bonggang 🥳 especialinda 🎁 examinalyelyaloo 🤾🏻‍♀️.<br><br>
+                Trulibels 🧘🏻‍♀️ yours 🎤,<br>
+                Mudak 🦄
+            </p> -->
         </div>
     </div>
     <div class="footer text-center py-3 text-white">
