--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/scripts.js"></script>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="assets/js/scripts.js" defer></script>
     <title>My Portfolio</title>
 </head>
 <body class="d-flex flex-column vh-100">
@@ -41,13 +41,12 @@
     <div class="main flex-grow-1 p-3" id="main-content">
         <div class="home-content p-4" id="home">
             <h2 class="fw-bold">Homepage</h2>
-            <p><b>This is a sample paragraph.</b></p>
-            <!-- <p class="text-align-justify">
-                Dear 💌 Teacheraka 🧑‍🏫,<br><br>
-                Kumustasa 👋🏻 kalabasa 🎃? Keri 👜 ka 👍🏻 lang 💃🏻 ba 🤨? Bet 👍🏻 kong ☺️ ipagsabi 📢 sayels 👀 na 📛 wititit 👎🏻 makakajosok 🚶🏻‍♀️ sa 🎒iskulembang 🏫 si 🍳 junakis 🙇🏻‍♀️ ngayonchi 📆. Rarampa 🕺🏻 kami 👯 ngayonchi ☑️ at 🤚🏻 bet 🫦 kong 🦍 ka 🍚 join 👏🏻 force 🤸🏻 si 🎙️ junakis 👫🏼. Nag 📇 ispluk 🫗 si 👨🏻‍💻 junakis 💅🏻 na 🦻🏻may 🤏🏻 periodical 🤔 examinelyaluliwawaw 📝 daw 🤭 silachina 🧞‍♀️. Sana 🤞🏻ay 💆🏻 giblaban 🤳🏻 mo 🕴🏻 sya 🐒 ng 🧶 bonggang 🌝 bonggang 🥳 especialinda 🎁 examinalyelyaloo 🤾🏻‍♀️.<br><br>
-                Trulibels 🧘🏻‍♀️ yours 🎤,<br>
-                Mudak 🦄
-            </p> -->
+            <p><b>Welcome to my Homepage !</b></p>
+            <p class="text-align-justify">
+                GREETENGS!<br><br>
+                Happy birthday to you and to your family 👪! Always remember 👩‍🏫 to love 🥰 your parents 😗 because they are the ones 👩🏻🧑 who pregnancy🤰 for you and always promote peace ✌️🕊️ and order. Take good care of yourself 🛁💇‍♀️🧘‍♀️ study 📕📖 hard 🪖<br><br>
+                Happy birthday 🎉🥳🎊👏🏻
+            </p>
         </div>
         <div class="about-content p-4" id="about">
             <h2 class="fw-bold">About Me</h2>
@@ -63,21 +62,15 @@
             <h2 class="fw-bold">Projects</h2>
             <p><b>This is a sample paragraph.</b></p>
             <p class="text-align-justify">
-                Dear 💌 Teacheraka 🧑‍🏫,<br><br>
-                Kumustasa 👋🏻 kalabasa 🎃? Keri 👜 ka 👍🏻 lang 💃🏻 ba 🤨? Bet 👍🏻 kong ☺️ ipagsabi 📢 sayels 👀 na 📛 wititit 👎🏻 makakajosok 🚶🏻‍♀️ sa 🎒iskulembang 🏫 si 🍳 junakis 🙇🏻‍♀️ ngayonchi 📆. Rarampa 🕺🏻 kami 👯 ngayonchi ☑️ at 🤚🏻 bet 🫦 kong 🦍 ka 🍚 join 👏🏻 force 🤸🏻 si 🎙️ junakis 👫🏼. Nag 📇 ispluk 🫗 si 👨🏻‍💻 junakis 💅🏻 na 🦻🏻may 🤏🏻 periodical 🤔 examinelyaluliwawaw 📝 daw 🤭 silachina 🧞‍♀️. Sana 🤞🏻ay 💆🏻 giblaban 🤳🏻 mo 🕴🏻 sya 🐒 ng 🧶 bonggang 🌝 bonggang 🥳 especialinda 🎁 examinalyelyaloo 🤾🏻‍♀️.<br><br>
-                Trulibels 🧘🏻‍♀️ yours 🎤,<br>
-                Mudak 🦄
+                test
             </p>
         </div>
         <div class="contact-content p-4" id="contact">
             <h2 class="fw-bold">Contact Information</h2>
             <p><b>This is a sample paragraph.</b></p>
-            <!-- <p class="text-align-justify">
-                Dear 💌 Teacheraka 🧑‍🏫,<br><br>
-                Kumustasa 👋🏻 kalabasa 🎃? Keri 👜 ka 👍🏻 lang 💃🏻 ba 🤨? Bet 👍🏻 kong ☺️ ipagsabi 📢 sayels 👀 na 📛 wititit 👎🏻 makakajosok 🚶🏻‍♀️ sa 🎒iskulembang 🏫 si 🍳 junakis 🙇🏻‍♀️ ngayonchi 📆. Rarampa 🕺🏻 kami 👯 ngayonchi ☑️ at 🤚🏻 bet 🫦 kong 🦍 ka 🍚 join 👏🏻 force 🤸🏻 si 🎙️ junakis 👫🏼. Nag 📇 ispluk 🫗 si 👨🏻‍💻 junakis 💅🏻 na 🦻🏻may 🤏🏻 periodical 🤔 examinelyaluliwawaw 📝 daw 🤭 silachina 🧞‍♀️. Sana 🤞🏻ay 💆🏻 giblaban 🤳🏻 mo 🕴🏻 sya 🐒 ng 🧶 bonggang 🌝 bonggang 🥳 especialinda 🎁 examinalyelyaloo 🤾🏻‍♀️.<br><br>
-                Trulibels 🧘🏻‍♀️ yours 🎤,<br>
-                Mudak 🦄
-            </p> -->
+            <p class="text-align-justify">
+                subomoto
+            </p>
         </div>
     </div>
     <div class="footer text-center py-3 text-white">
