--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </p>
         </div>
     </div>
-    <div class="footer text-center py-3 text-white">
+    <div class="footer fixed-bottom text-center py-3 text-white">
         <p class="fst-italic mb-0">&copy; 2025 by <a href="https://github.com/olivsiarchiv" class="text-decoration-none">olivsiarchiv</a></p>
     </div>
 </body>
