--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/scripts.js" defer></script>
+    <link rel="icon" href="#" type="image/png">
     <title>My Portfolio</title>
 </head>
 <body class="d-flex flex-column vh-100">
