--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body class="d-flex flex-column vh-100">
     <div class="header text-white text-center py-4">
-        <h1 class="fw-bolder">Welcome to My Portfolio</h1>
+        <h1 class="fw-bolder text-uppercase mb-0" style="font-size: clamp(1.8rem, 5vw, 4rem);">Welcome to My Portfolio</h1>
     </div>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid px-4">
-            <a href="#" class="navbar-brand fw-bold fst-italic text-white">My Portfolio</a>
+            <a href="#" class="navbar-brand fw-bold text-white">My Portfolio</a>
             <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
